--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -103,7 +103,7 @@
 
     .profile__add {
         margin: 0;
-        width: 400px;
+        width: 100%;
         margin-bottom: 36px;
     }
 }
